# spraybiclique

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: auth_sample.jsonl
src/spraybiclique/: __init__.py  api.py  cli.py  detect.py  meta.py  normalize.py  report.py  schema.py  scoring.py
tests/: test_cli.py  test_detect.py
