[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spraybiclique"
version = "0.9.1"
description = "Explainable biclique witness detection for distributed authentication abuse."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Team JRTI" },
]
maintainers = [
    { name = "Team JRTI" },
]
keywords = ["auth-detection", "cybersecurity", "graph-analytics", "password-spray", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "fastapi",
    "python-multipart",
    "uvicorn",
]

[project.urls]
Repository = "https://github.com/jbaelaw/spraybiclique"

[project.optional-dependencies]
dev = [
    "httpx",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
